tomcat websocket example

--- a/test.websocket.client/pom.xml
+++ b/test.websocket.client/pom.xml
@@ -14,20 +14,16 @@
 	</properties>
 
 	<dependencies>
-	<!--
-		<dependency>
-			<groupId>javax.websocket</groupId>
-			<artifactId>javax.websocket-api</artifactId>
-			<version>1.1</version>
-		</dependency>
-		-->
-
 		<dependency>
 			<groupId>org.eclipse.jetty.websocket</groupId>
 			<artifactId>websocket-client</artifactId>
 			<version>9.3.2.v20150730</version>
 		</dependency>
-
+		<dependency>
+			<groupId>jline</groupId>
+			<artifactId>jline</artifactId>
+			<version>2.12</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
